Add CLAUDE.md and refactor services for best practices
- Add CLAUDE.md with comprehensive project context for Claude Code
  - Quick start commands, project structure, API docs
  - Architecture patterns, testing guidelines, code style
  - Common tasks and debugging tips

- Refactor GlobalExceptionHandler:
  - Use existing ErrorResponse class instead of inner record
  - Add logging to all exception handlers
  - Add handlers for IllegalStateException and IllegalArgumentException
  - Improve error messages (don't expose internal details in generic handler)

- Modernize service implementations:
  - Replace Collectors.toList() with toList() (Java 16+)
  - Remove unused import of java.util.stream.Collectors