@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -73,7 +72,7 @@ public class WarehouseServiceImpl implements WarehouseService {
 
         return warehouseRepository.findAll().stream()
                 .map(WarehouseResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -83,7 +82,7 @@ public class WarehouseServiceImpl implements WarehouseService {
 
         return warehouseRepository.findByActiveTrue().stream()
                 .map(WarehouseResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
